# SchemaLinter

./: .gitignore  README.md  pyproject.toml  requirements.txt  schemalinter.yaml  setup.py
.github/workflows/: publish.yml
examples/: sample_config.yaml
examples/sample_project/: config.yaml  models.py  queries.py
examples/schemas/: base_schema.sql  target_schema.sql
schemalinter/: __init__.py  cli.py
schemalinter/core/: __init__.py  analyzer.py  config.py  schema_diff.py
schemalinter/parsers/: __init__.py  base.py  python_parser.py  sql_parser.py
schemalinter/reporters/: __init__.py  base.py  console_reporter.py  json_reporter.py  markdown_reporter.py
